--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,14 @@ Thumbs.db
 # Logs
 *.log
 
+# Images - uncomment if you don't want to commit images
+# images/*.jpg
+# images/*.jpeg
+# images/*.png
+# images/*.webp
+
+# Videos - excluded from git due to size
+videos/*.mp4
+videos/*.mov
+videos/*.avi
+
