--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,7 @@ Thumbs.db
 # images/*.webp
 
 # Videos - excluded from git due to size
-videos/*.mp4
-videos/*.mov
-videos/*.avi
+# videos/*.mp4
+# videos/*.mov
+# videos/*.avi
 
